@@ -2239,16 +2239,6 @@ const ShapeItem len_BZ = B->get_shape_item(0);
         return Token(TOK_APL_VALUE1, Z);
       }
 
-   // check that all cells are characters or near-real numbers
-   //
-const APL_Float qct = Workspace::get_CT();
-   loop(b, len_BZ)
-      {
-        if (B->get_ravel(b).is_character_cell())   continue;   // char: OK
-        if (B->get_ravel(b).is_near_real(qct))     continue;   // near-real: OK
-        DOMAIN_ERROR;
-      }
-
 const ShapeItem comp_len = B->element_count()/len_BZ;
 const Cell * array[len_BZ];
    loop(bz, len_BZ)   array[bz] = &B->get_ravel(bz*comp_len);
